<resources>
    <string name="app_name">DroidCafe</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donut">Donuts are glazes and sprinkled with candy</string>
    <string name="ice_cream">Ice cream have chocolate and vanilla</string>
    <string name="froyo">Froyo is premium self service</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="order_intro">Enter</string>
    <string name="name_text">enter your name</string>
    <string name="address">Address</string>
    <string name="address_text">Enter your address</string>
    <string name="phone">Phone</string>
    <string name="phone_text">Enter your phone number</string>
    <string name="note">Note:</string>
    <string name="note_text">Enter note</string>
    <string name="delivery_text">Choose your delivery method</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="title_activity_order">Order Activity</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>